--- a/estilos.css
+++ b/estilos.css
@@ -9,7 +9,7 @@
 {
     display: flex;
     align-items: center;
-    padding: 10px;
+    padding: 35px;
 }
 
 nav
@@ -66,7 +66,7 @@ p
 .col-2
 {
     flex-basis: 50%;
-    min-width: 300px;
+    min-width: 200px;
 }
 
 .col-2 img
@@ -117,7 +117,7 @@ p
 
 .col-3 img
 {
-    width: 80%;
+    width: 75%;
 }
 
 .small-container
@@ -183,4 +183,88 @@ h4
 .col-4:hover
 {
     transform: translateY(-5px);
+}
+
+.offer
+{
+    background: radial-gradient(#fff,#8bc3e9);
+    margin-top: 80px;
+    padding: 10px 0;
+}
+
+.col-2 .offer-img
+{
+    padding: 50px;
+}
+
+small
+{
+    color: rgb(26, 25, 25);
+}
+
+.Testimonio
+{
+  padding-top: 20px;  
+}
+
+.Testimonio .col-3
+{
+    text-align: center;
+    padding: 40px 20px;   
+    box-shadow: 0 0 20px 0px rgb(0, 0, 0,0.1);
+    cursor: pointer;
+}
+
+.Testimonio .col-3 img
+{
+    width: 80px;
+    margin-top: 20px;
+    border-radius: 50%;   
+}
+
+.Testimonio .col-3:hover
+{
+    transform: translateY(-10px);
+}
+
+.fa.fa-quote-left
+{
+    font-size: 30px;
+    color: #ff523b;
+}
+
+.col-3 p
+{
+   font-size: 15px;
+   margin: 12px 0;
+   color: #777; 
+}
+
+.Testimonio .col-3 h3
+{
+    font-weight: 600;
+    color: #555;
+    font-size: 16px; 
+}
+
+.marcas
+{
+   margin: 100px auto; 
+}
+
+.col-5
+{
+    width: 160px;
+}
+
+.col-5 img
+{
+    width: 100px;
+    cursor: pointer;
+    filter: grayscale(100%);
+}
+
+.col-5 img:hover
+{
+    filter: grayscale(0);
 }
