--- a/estilos.css
+++ b/estilos.css
@@ -71,7 +71,7 @@ p
 
 .col-2 img
 {
-    max-width: 100%;
+    max-width: 90%;
     padding:50px 0;
 }
 
@@ -267,4 +267,134 @@ small
 .col-5 img:hover
 {
     filter: grayscale(0);
+}
+
+.footer
+{
+    background: #000000;
+    color: #8a8a8a;
+    font-size: 14px;
+    padding: 60px 0 20px;
+}
+
+.footer p
+{
+    color: #8a8a8a;
+}
+
+.footer h3
+{
+    color: #fff;
+    margin-bottom: 20px;
+}
+
+.footer-col-1, .footer-col-2, .footer-col-3, .footer-col-4
+{
+    min-width: 300px;
+    margin-bottom: 20px ;
+} 
+
+.footer-col-1
+{
+    flex-basis: 30%;
+}
+
+.footer-col-2
+{
+    flex: 1;
+    text-align: center;
+}
+
+.footer-col-2 img
+{
+    width: 180px;
+    margin-bottom: 20px;
+}
+
+.footer-col-4
+{
+    text-align: right;
+    
+}
+
+.footer-col-4 ul
+{
+    list-style-type: none;
+}
+
+.footer-col-3, .footer-col-4
+{
+    flex-basis: 12%;
+    text-align: center;
+}
+
+ul
+{
+    list-style-type: none;
+}
+
+.playstore_logo
+{
+    margin-top: 20px;  
+}
+
+.playstore_logo img
+{
+    width: 400px; 
+}
+
+.footer hr
+{
+    border: none;
+    background: #b5b5b5;
+    height: 1px;
+    margin: 20px 0;
+}
+
+.Copyright
+{
+    text-align: center;
+}
+
+.menu-icon
+{
+    width: 28px;
+    margin-left: 20px;
+    display: none;
+}
+
+/*------ query para el menu --------*/
+
+@media only screen and (max-width: 800px)
+{
+    text-align: right;
+    nav ul
+    {
+        position: absolute;
+        top: 70px;
+        left: 0;
+        background: #333;
+        width: 100%;
+        overflow: hidden;
+        transition: max-height 0.5s;
+    }
+
+    nav ul li
+    {
+        display: block;
+        margin-right: 50px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+
+    nav ul li a
+    {
+       color: #000; 
+    }
+
+    .menu-icon
+    {
+        display: block;
+        cursor: pointer;
+    }
 }
