--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -5,7 +5,7 @@
 
 body {
     background: hsla(220, 88%, 90%, 0.787);
-    background: linear-gradient(to right, rgba(173, 214, 255, 0.877), #33AEFF);
+    background: linear-gradient(to right, rgba(173, 214, 255, 0.877), #ffad33);
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
