--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -14,7 +14,7 @@
     <div class="modal-dialog modal-lg">
         <div class="modal-content ">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Agregar articulo</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Agregar un Producto</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -24,13 +24,13 @@
                 <div class="card-body">
                     <form action="/Gowplay/addarticulo" method="POST">
                         <div class="form-group">
-                            <input type="text" class="form-control" name="nombre" placeholder=" Titulo" autofocus>
+                            <input type="text" class="form-control" name="nombre" placeholder="Nombre del Producto" autofocus>
                         </div>
                         <div class="form-group">
                             <input type="url" class="form-control" name="img" placeholder=" Url de la imagen">
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" name="categoria" placeholder=" categoria">
+                            <input type="text" class="form-control" name="categoria" placeholder=" Categoria">
                         </div>
                         <div class="form-group">
                             <textarea name="descripcion" rows="2" class="form-control"
