--- a/src/views/partials/index.hbs
+++ b/src/views/partials/index.hbs
@@ -28,10 +28,10 @@
                                         </div>
                                         <div class="form-group">
 
-                                            <a href="/Gowplay/delete/{{id}}" class="btn btn-danger d-block">
+                                            <a href="/GowPlay/delete/{{id}}" class="btn btn-danger d-block">
                                                 ELIMINAR </a>
                                             <br>
-                                            <a href="/Gowplay/edit/{{id}}" class="btn btn-twitter d-block">
+                                            <a href="/GowPlay/edit/{{id}}" class="btn btn-twitter d-block">
                                                 EDITAR </a>
                                         </div>
 
