--- a/estilos.css
+++ b/estilos.css
@@ -9,7 +9,7 @@
 {
     display: flex;
     align-items: center;
-    padding: 35px;
+    padding: 15px;
 }
 
 nav
@@ -71,8 +71,8 @@ p
 
 .col-2 img
 {
-    max-width: 90%;
-    padding:50px 0;
+    max-width: 85%;
+    padding: 61px 0;
 }
 
 .col-2 h1
@@ -122,7 +122,7 @@ p
 
 .small-container
 {
-    max-width: 1080px;
+    max-width: 900px;
     margin: auto;
     padding-left: 25px;
     scroll-padding-right: 25px;
@@ -396,4 +396,94 @@ ul
         display: block;
         cursor: pointer;
     }
+}
+
+/*Pagina de Registro*/
+
+.pagina-cuenta
+{
+    padding: 50px 0;
+    background: radial-gradient(#fff,#8bc3e9);
+}
+
+.form-container
+{
+    background: #fff;
+    width: 300px;
+    height: 400px;
+    position: relative;
+    text-align: center;
+    padding: 20px 0;
+    margin: auto;
+    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.1);
+}
+
+.form-container span
+{
+    font-weight: bold;
+    padding: 0 10px;
+    color: #555;
+    cursor: pointer;
+    width: 100px;
+    display: inline-block;
+}
+
+.form-btn
+{
+    display: inline-block;
+}
+
+.form-container form
+{
+    max-width: 300px;
+    padding: 0 20px;
+    position: absolute;
+    top: 130px;
+}
+
+form input
+{
+    width: 100%;
+    height: 30px;
+    margin: 10px 0;
+    padding: 0 10px;
+    border: 1px solid #ccc;
+}
+
+form .btn
+{ 
+    width: 100%;
+    border: none;
+    cursor: pointer;
+    margin: 10px 0;
+}
+
+form .btn:focus
+{
+    outline: none;
+}
+
+#loginform
+{
+    left: -300px;
+}
+
+#Registroform
+{
+    left: 0;
+}
+
+form a
+{
+    font-size: 12px;
+}
+
+#indicador
+{
+  width: 100px;
+  border: none;
+  background: #ff523b;
+  height: 3px;
+  margin-top: 8px;
+  transform: translateX(100px);
 }
